# Anticarium_Pi

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  VersionConfig.h.in  main.cpp  pi.py  settings.ini.in
apps/camera_app/: CMakeLists.txt  main.cpp
apps/server_app/: CMakeLists.txt  main.cpp
cmake/: ExternLibs.cmake
libs/: CMakeLists.txt
libs/pid/: PID.cpp  PID.h
libs/raspicam/: CMakeLists.txt
libs/raspicam/src/: CMakeLists.txt
setup/: config.txt  config.txt.example  run_on_boot.sh  setup_rpi.sh  setup_vm.sh
src/: CMakeLists.txt
src/anticarium_camera/: CMakeLists.txt
src/anticarium_camera/anticarium_camera/: AnticariumCameraManager.cpp  AnticariumCameraManager.h  AnticariumStream.cpp  AnticariumStream.h  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Client.hpp  ImageProcess.cpp  ImageProcess.h  PiImage.hpp  StreamManager.cpp  StreamManager.h  UDPListener.cpp  UDPListener.h  UDPManager.cpp  UDPManager.h  UDPSender.cpp  UDPSender.h  UDPSwitch.cpp  UDPSwitch.h
src/anticarium_pi/: AnticariumManager.cpp  AnticariumManager.h  CMakeLists.txt  I2CWorker.cpp  I2CWorker.h  I2cTalker.cpp  I2cTalker.h  Jttp.cpp  Jttp.h  TestClass.cpp  TestClass.h  WeatherEmulator.cpp  WeatherEmulator.h  WeatherManager.cpp  WeatherManager.h
src/anticarium_pi/anticarium_pi/: AnticariumManager.cpp  Jttp.cpp  WeatherEmulator.cpp  WeatherEmulator.h  WeatherManager.cpp  WeatherManager.h
src/anticarium_pi/anticarium_pi/helper/: AnticariumFunctions.hpp
src/anticarium_pi/anticarium_pi/i2c_members/: I2CInput.cpp  I2CInput.h  I2COutput.cpp  I2COutput.h  I2CSlave.cpp  I2CSlave.h
src/anticarium_pi/config/: ApplicationSettings.cpp  ApplicationSettings.h
src/anticarium_pi/i2c_members/: I2CInput.cpp  I2CInput.h  I2COutput.cpp  I2COutput.h  I2CSlave.cpp  I2CSlave.h
src/config/: CMakeLists.txt
src/config/config/: ApplicationSettings.cpp  ApplicationSettings.h  DynamicSettings.cpp  DynamicSettings.h  PIDValues.cpp  PIDValues.h
src/dht11_pi/: Dht11.cpp  Dht11.h
tests/: CMakeLists.txt  I2cTests.cpp  ImageProcessTests.cpp  WeatherEmulatorTests.cpp
tests/anticarium_pi_tests/: TestsUtility.cpp  TestsUtility.h
tests/config/: ApplicationSettingsTests.cpp  SettingsTests.cpp  TestSettings.ini
tests/dht11_tests/: Dht11Test.h
tests/io_tests/: IoTest.cpp  IoTest.h  PwmTest.cpp
tests/json_files/: ControlSettings.json
